--- a/src/main/java/View/Transfer.form
+++ b/src/main/java/View/Transfer.form
@@ -24,7 +24,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="103" max="32767" attributes="0"/>
+              <EmptySpace pref="104" max="32767" attributes="0"/>
               <Component id="jLabel1" min="-2" pref="293" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
           </Group>
@@ -44,7 +44,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="receiverAccountNoTextField" max="32767" attributes="0"/>
                   <Component id="returnBtn" alignment="1" max="32767" attributes="0"/>
-                  <Component id="withdraw_btn" max="32767" attributes="0"/>
+                  <Component id="transferBtn" max="32767" attributes="0"/>
                   <Component id="amountField" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -72,7 +72,7 @@
                   <Component id="amountField" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
-              <Component id="withdraw_btn" min="-2" pref="45" max="-2" attributes="0"/>
+              <Component id="transferBtn" min="-2" pref="45" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
               <Component id="returnBtn" min="-2" pref="43" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
@@ -124,7 +124,7 @@
         <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="amountFieldgetInputAmount_OnKeypress"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="withdraw_btn">
+    <Component class="javax.swing.JButton" name="transferBtn">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="18" style="1"/>
@@ -132,7 +132,7 @@
         <Property name="text" type="java.lang.String" value="Transfer"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="withdraw_btnActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="transferBtnActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="returnBtn">
